--- a/application/templates/summary_report.html
+++ b/application/templates/summary_report.html
@@ -28,7 +28,7 @@
                     <td>{{dept_info.man_submit}}</td>
                     <td>{{dept_info.reg}}</td>
                     <td>{{dept_info.approved}}</td>
-                    <td>{{dept_info.percent}}</td>
+                    <td>{{dept_info.percent}}%</td>
 
                 </tr>
 
