--- a/application/templates/api.manager_form.html
+++ b/application/templates/api.manager_form.html
@@ -30,6 +30,7 @@ function check_form(){
         if (data){if (confirm('Unfilled fields: ' + data + '. Continue?')){
                   approve();}
                  }
+        else {approve()}
 
     })
 }
