--- a/application/templates/_base.html
+++ b/application/templates/_base.html
@@ -62,9 +62,9 @@
 </div>
 
  <!--footer-->
-<!--<div id="footer">-->
-    <!--From Kharkov with Love (c) Mirantis-->
-<!--</div>-->
+<div id="footer">
+    From Kharkov with Love (c) Mirantis
+</div>
 
 </body>
 </html>
