--- a/application/templates/api.manager_form.html
+++ b/application/templates/api.manager_form.html
@@ -232,7 +232,7 @@ $(document).ready(function() {
 
 <div>
     <form action="{{upload_url}}" method="POST" enctype="multipart/form-data">
-        <input type='hidden' name='key' value={{key}}>
+        <input type='hidden' name='key' value={{form.key}}>
         <input type="file" name="file"><br>
         <input type="submit" name="submit" value="attach">
     </form>
