--- a/application/templates/users.html
+++ b/application/templates/users.html
@@ -14,6 +14,7 @@
                     <td> Manager </td>
                     <td> Roles </td>
                     <td> Department </td>
+                    <td> Position </td>
                 </tr>
             </thead>
         {% endif %}
@@ -25,6 +26,7 @@
                 <td>{{user.manager.first_name}} {{user.manager.last_name}}</td>
                 <td>{{user.roles}}</td>
                 <td>{{user.dept.name}}</td>
+                <td>{{user.position}}</td>
             </tr>
         {% endfor %}
     </table>
