--- a/application/templates/api.readonly_eaf.html
+++ b/application/templates/api.readonly_eaf.html
@@ -1,6 +1,9 @@
 {% extends "_api_base.html" %}
 
 {% block script %}
+<script type="text/javascript">
+
+</script>
 {% endblock %}
 
 {% block content %}
