--- a/application/templates/api.readonly_maf.html
+++ b/application/templates/api.readonly_maf.html
@@ -1,6 +1,11 @@
 {% extends "_api_base.html" %}
 
 {% block script %}
+<script type="text/javascript">
+    $(document).ready(function(){
+        $('#hint').html('')
+    })
+</script>
 {% endblock %}
 
 {% block content %}
